bad/bin_op_ge_int_array.example_compiler_output
ERROR
[1mbad/bin_op_ge_int_array.lat:3:5: [1;31merror: [0;1moperator >= is defined only for int values and string values, not `int` and `int[]`[m
	42 >= new int[3];
	   [1;32m^[m
